# mlpy

./: .coverage.LAPTOP-6T73LNU2.6992.XqszXYQx  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CUsersvogttPyCharmProjectsmlpytest_example.ml  Makefile  README.md  SPRINT_5_PERFORMANCE_DASHBOARD.md  _integration_test.py  baseline_test_results.txt  bash.exe.stackdump  check_evens.py  claude-setup.md  comprehensive_performance_report.py  comprehensive_performance_results.json  coverage.json  dangerous_example.ml  dangerous_example.py  debug-proposal.md  debug_arrow.py  debug_ast_detailed.py  debug_execution.py  debug_function_calls.py  debug_parse.py  fix_length_syntax.py  migrate_functions.py  migrate_remaining.py  migrate_to_arrow_blocks.py  ml_core_coverage_analysis.md  ml_full_results.json  ml_integration_test_report.json  ml_parse_results.json  ml_tests_proposal.md  mlpy_complete.md  noxfile.py  parser_validation_results.json  pyproject.toml  requirements-dev.txt  requirements.txt  run_performance_benchmark.py  (+55 more)
.claude/: README.md  settings.json  sprint4-completion-report.md
debug/: .gitignore  README.md  compare_slicing.py  debug_negative_slice.py  test_quicksort.py
docs/: Makefile  PoC-Debug.md  documentation-plan.md  integration-patterns-analysis.md  stdlib-io-capabilities.md
examples/: capability_demo.py  capability_integration_demo.ml  standard_library_demo.ml  stdlib_simple_test.ml
profiling/: 01_recursion_fibonacci_profile.txt  01_recursion_fibonacci_profile_RUN2.txt  02_type_conversion_profile.txt  02_type_conversion_profile_RUN2.txt  03_console_basic_profile.txt  03_math_basic_profile.txt  04_quicksort_profile.txt  04_quicksort_profile_RUN2.txt  05_collection_functions_profile.txt  05_collection_functions_profile_RUN2.txt  CACHE-SUCCESS.md  ENHANCED-PROFILING-PLAN.md  FINDINGS.md  FORCE-TRANSPILE-FEATURE.md  GRAMMAR-PRECOMPILATION-SUCCESS.md  IMPLEMENTATION-FINAL.md  OPTIMIZATION-RESULTS-COMPARISON.md  PHASE-4.5-COMPLETE.md  PROFILE-OPTIONS-REFERENCE.md  README.md  SESSION-SUMMARY.md  cache-analysis.md  executive-summary.md  fibonacci_CACHE_RUN1.txt  fibonacci_CACHE_RUN2.txt  fibonacci_CACHE_RUN3.txt  fibonacci_FINAL_RUN1.txt  fibonacci_FINAL_RUN2.txt  fibonacci_FIXED_RUN1.txt  fibonacci_WORKING_RUN1.txt  fibonacci_WORKING_RUN2.txt  fibonacci_WORKING_RUN3.txt  test1_cold_new.txt  test1_warm_new.txt  test2_cold_new.txt  test2_warm_new.txt  test3_cold_new.txt  test3_warm_new.txt  test4_cold_new.txt  test4_warm_new.txt  (+1 more)
refactoring-baseline/: api_usage_documentation.md  baseline_summary.md  coverage_baseline.txt  integration_tests_baseline.txt  run_regression_tests.py  unit_tests_baseline.txt
scripts/: benchmark_parser.py  compile_grammar.py  mlpy-commands.sh  sprint-capabilities.sh
tests/: bash.exe.stackdump  conftest.py  debug_boolean.ml  debug_boolean.py  debug_object.ml  debug_object.py  debug_return.ml  debug_return.py  debug_variable.ml  debug_variable2.ml  debug_variable2.py  demo_import_system.py  ml_full_results.json  ml_parse_results.json  ml_repl_test_runner.py  ml_snippet_validator.py  ml_test_runner.py  new_features_demo.ml  new_features_demo.py  py_snippet_validator.py  repl_doctest_runner.py  scientific_notation_demo.ml  simple_functional_test.py  simple_import_test.py  simple_type_test.ml  test_array_access_methods.ml  test_array_append_fixed.ml  test_array_append_fixed.py  test_array_assignment_approaches.ml  test_best_safe_append.ml  test_best_safe_append.py  test_builtin_identifier_routing.py  test_cli.py  test_comprehensive_security_audit.py  test_functional_chaining_bug.py  test_functional_integration.py  test_lambda_none_handling.py  test_lambda_undefined_variable.py  test_lambda_variable_scoping.py  test_lsp_server.py  (+19 more)
transpiled_tests/: advanced_control_flow_and_functions.py  basic_features.py  control_flow.py  (+23 more)
(+1042 files in other folders)
